# Restclient

./: CMakeLists.txt  Login.cpp  Login.h  README.md  login.cpp  login.h  login.ui  main.cpp
rest/: Client.cpp  Client.h  LoginException.h  Message.cpp  Message.h  User.cpp  User.h
